create form with text inputs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
         <h1>My first blog</h1>
         <div id="principal">
             <h2>What's on your mind?</h2>
-            
+            <form method="post">
+                <div>
+                    <label for="">Username</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label for="">Tittle</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label for="">Content</label>
+                    <input type="text">
+                </div>
+                </form>
         </div>
     </main>
     
