--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     </header>
     <main>
         <h1>My first blog</h1>
+        <div id="bg-section1"></div>
+        <div id="bg-section2"></div>
+        <div id="bg-section3"></div>
+        <div id="bg-section4"></div>
+        
         <div id="principal">
             <h2>What's on your mind?</h2>
             <form method="post">
@@ -27,6 +32,7 @@
                     <label for="">Content</label>
                     <input type="text">
                 </div>
+                <button>Submit</button>
                 </form>
         </div>
     </main>
