styling minor details

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div>
                     <label for="">Content</label>
-                    <input type="text">
+                    <textarea name="" id=""  rows="5"></textarea>
                 </div>
                 <button>Submit</button>
                 </form>
