--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>My first blog</h1>
+        <img src="" alt="change betwwen dark and light mode symbol">
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <p>Made with &#10084; by Yordano</p>
+        <p><b>Portfolio: </b> Yordano</p>
+        <p><b>Blog: </b> Full Stack blog</p>
+        <p><b>Email: </b> yordanopv@gmail.com</p>
+    </footer>
     <script></script>
 </body>
 </html>
