styling blog post and ordering

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,16 @@
         <img src="" alt="change betwwen dark and light mode symbol">
     </header>
     <main>
-
+    <div id="bg-section1"></div>
+    <div id="bg-section2"></div>
+    <div id="bg-section3"></div>
+    <div id="bg-section4"></div>
+    
+    <section id="content">
+        <div class="blog-post"></div>
+        <div class="blog-post"></div>
+    </section>
+        
     </main>
     <footer>
         <p>Made with &#10084; by Yordano</p>
