styling footer final

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/css/blog.css">
-    <title>Document</title>
+    <title>My personal blog - Posts</title>
 </head>
 <body>
     <header>
@@ -18,8 +18,16 @@
     <div id="bg-section4"></div>
     
     <section id="content">
-        <div class="blog-post"></div>
-        <div class="blog-post"></div>
+        <div class="blog-post">
+            <p class="title"><b>Tittle 1</b></p>
+            <p class="content">Some content</p>
+            <p class="user">Posted by : me</p>
+        </div>
+        <div class="blog-post">
+            <p class="title"><b>Tittle 1</b></p>
+            <p class="content">Some content</p>
+            <p class="user">Posted by : me</p>
+        </div>
 
     </section>
         
