styling blog posts divs

--- a/blog.html
+++ b/blog.html
@@ -19,14 +19,19 @@
     
     <section id="content">
         <div class="blog-post">
-            <p class="title"><b>Tittle 1</b></p>
+            <div class="t-c">
+                <p class="title"><b>Tittle 1</b></p>
             <p class="content">Some content</p>
-            <p class="user">Posted by : me</p>
+            </div>
+            
+            <p class="user"><i>Posted by : me</i></p>
         </div>
         <div class="blog-post">
-            <p class="title"><b>Tittle 1</b></p>
+            <div class="t-c">
+                <p class="title"><b>Tittle 1</b></p>
             <p class="content">Some content</p>
-            <p class="user">Posted by : me</p>
+            </div>
+            <p class="user"><i>Posted by : me</i></p>
         </div>
 
     </section>
