added dark-light logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="change betwwen dark and light mode symbol">
+        <img src="./resources/images/light-dark-mode.png" alt="change betwwen dark and light mode symbol">
     </header>
     <main>
         
