added light and dark options on css

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>My personal blog</title>
 </head>
 <body>
-    <header>
-        <button id="mode-change"></button>
+    <header class="light">
+        <button class="light" id="mode-change"></button>
     </header>
     <main>
         
