styling blog header

--- a/blog.html
+++ b/blog.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>My first blog</h1>
-        <img src="" alt="change betwwen dark and light mode symbol">
+        <h1 class="light">My first blog</h1>
+        <button class="light"></button>
     </header>
     <main>
-    <div id="bg-section1"></div>
-    <div id="bg-section2"></div>
-    <div id="bg-section3"></div>
-    <div id="bg-section4"></div>
+    <div class="bg-section1 light"></div>
+    <div class="bg-section2 light"></div>
+    <div class="bg-section3 light"></div>
+    <div class="bg-section4 light"></div>
     
     <section id="content">
         <div class="blog-post">
@@ -43,6 +43,6 @@
         <p><b>Blog: </b> Full Stack blog</p>
         <p><b>Email: </b> yordanopv@gmail.com</p>
     </footer>
-    <script></script>
+    <script src="./resources/js/blog.js"></script>
 </body>
 </html>
