--- a/blog.html
+++ b/blog.html
@@ -7,9 +7,12 @@
     <title>My personal blog - Posts</title>
 </head>
 <body>
-    <header>
+    <header class="light">
         <h1 class="light">My first blog</h1>
-        <button class="light"></button>
+        <div id="buttons">
+            <button id="mode-change" class="light"></button>
+            <button class="light"></button>
+        </div>
     </header>
     <main>
     <div class="bg-section1 light"></div>
@@ -37,11 +40,11 @@
     </section>
         
     </main>
-    <footer>
-        <p>Made with &#10084; by Yordano</p>
-        <p><b>Portfolio: </b> Yordano</p>
-        <p><b>Blog: </b> Full Stack blog</p>
-        <p><b>Email: </b> yordanopv@gmail.com</p>
+    <footer class="light">
+        <p class="light">Made with &#10084; by Yordano</p>
+        <p class="light"><b>Portfolio: </b> Yordano</p>
+        <p class="light"><b>Blog: </b> Full Stack blog</p>
+        <p class="light"><b>Email: </b> yordanopv@gmail.com</p>
     </footer>
     <script src="./resources/js/blog.js"></script>
 </body>
