blog css with light and dark options

--- a/blog.html
+++ b/blog.html
@@ -21,20 +21,20 @@
     <div class="bg-section4 light"></div>
     
     <section id="content">
-        <div class="blog-post">
+        <div class="blog-post light">
             <div class="t-c">
-                <p class="title"><b>Tittle 1</b></p>
-            <p class="content">Some content</p>
+                <p class="title light"><b>Tittle 1</b></p>
+            <p class="content light">Some content</p>
             </div>
             
-            <p class="user"><i>Posted by : me</i></p>
+            <p class="user light"><i>Posted by : me</i></p>
         </div>
-        <div class="blog-post">
+        <div class="blog-post light">
             <div class="t-c">
-                <p class="title"><b>Tittle 1</b></p>
-            <p class="content">Some content</p>
+                <p class="title light"><b>Tittle 1</b></p>
+            <p class="content light">Some content</p>
             </div>
-            <p class="user"><i>Posted by : me</i></p>
+            <p class="user light"><i>Posted by : me</i></p>
         </div>
 
     </section>
@@ -46,6 +46,6 @@
         <p class="light"><b>Blog: </b> Full Stack blog</p>
         <p class="light"><b>Email: </b> yordanopv@gmail.com</p>
     </footer>
-    <script src="./resources/js/blog.js"></script>
+    <script src="./resources/js/logic.js"></script>
 </body>
 </html>
