logic test to add posts

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,8 @@
         <h1 class="light">My first blog</h1>
         <div id="buttons">
             <button id="mode-change" class="light"></button>
-            <button class="light"></button>
+            <button id="back" class="light"><b>Back</b></button>
+            <button id="test">test</button>
         </div>
     </header>
     <main>
@@ -47,5 +48,6 @@
         <p class="light"><b>Email: </b> yordanopv@gmail.com</p>
     </footer>
     <script src="./resources/js/logic.js"></script>
+    <script src="./resources/js/blog.js"></script>
 </body>
 </html>
