start to simplyfy the css files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/css/style.css">
+    <link rel="stylesheet" href="./resources/css/form.css">
     <title>My personal blog</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
         
         <div id="principal">
             <h2 class="light">What's on your mind?</h2>
-            <form method="post">
+            <form method="POST">
                 <div>
                     <label class="light" for="">Username</label>
                     <input class="light" type="text">
@@ -33,7 +34,10 @@
                     <label class="light" for="">Content</label>
                     <textarea class="light" name="" id=""  rows="5"></textarea>
                 </div>
-                <button class="light">Submit</button>
+                <a href="./blog.html">
+                    <button class="light">Submit</button>
+                </a>
+                
                 </form>
         </div>
     </main>
