--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/css/blog.css">
+    <link rel="stylesheet" href="resources/css/style.css">
     <title>My personal blog - Posts</title>
 </head>
 <body>
