adding link to portfolio

--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
     </main>
     <footer class="light">
         <p class="light">Made with &#10084; by Yordano</p>
-        <p class="light"><b>Portfolio: </b> Yordano</p>
+        <p class="light"><b>Portfolio: </b> <a href="https://yordanop.github.io/yordano-portfolio/">Yordanos portfolio</a> </p>
         <p class="light"><b>Blog: </b> Full Stack blog</p>
         <p class="light"><b>Email: </b> yordanopv@gmail.com</p>
     </footer>
